--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,4 +3,7 @@
 @import "global/body.scss";
 @import "global/fonts.scss";
 @import "blocks/visually-hidden.scss";
+@import "blocks/page-header.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/page-main.scss";
 
