Create cart, card and styled it. Some improvements

--- a/src/styles/blocks/page-header.scss
+++ b/src/styles/blocks/page-header.scss
@@ -26,3 +26,24 @@
   }
 }
 
+@media (min-width: $tablet-width) {
+  .page-header {
+    width: auto;
+  }
+
+  .page-header__wrapper {
+    width: 640px;
+    margin: 0 auto;
+  }
+
+  .page-header__logo {
+    font-size: 40px;
+    line-height: 60px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__wrapper {
+    width: 1300px;
+  }
+}
