--- a/src/styles/blocks/page-main.scss
+++ b/src/styles/blocks/page-main.scss
@@ -6,3 +6,15 @@
   width: 360px;
   margin: 0 auto;
 }
+
+@media (min-width: $tablet-width) {
+  .page-main__wrapper {
+    width: 660px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-main__wrapper {
+    width: 1300px;
+  }
+}
