--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,4 +6,8 @@
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/page-main.scss";
-
+@import "blocks/catalog.scss";
+@import "blocks/small-card.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/ship-card.scss";
+@import "blocks/cart.scss";
