--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,3 +11,5 @@
 @import "blocks/page-footer.scss";
 @import "blocks/ship-card.scss";
 @import "blocks/cart.scss";
+@import "blocks/feedback.scss";
+@import "blocks/user-info.scss";
