--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -13,3 +13,6 @@
 @import "blocks/cart.scss";
 @import "blocks/feedback.scss";
 @import "blocks/user-info.scss";
+@import "blocks/delivery.scss";
+@import "blocks/payment.scss";
+@import "blocks/outro.scss";
