--- a/src/styles/blocks/feedback.scss
+++ b/src/styles/blocks/feedback.scss
@@ -56,7 +56,8 @@
 
 .feedback__button-back {
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+  margin-top: 30px;
   padding: 6px;
   padding-left: 30px;
   cursor: pointer;
