--- a/src/styles/global/variables.scss
+++ b/src/styles/global/variables.scss
@@ -1,7 +1,7 @@
 $text-blue: #1f3f68;
-$text-white: #fff;
+$text-white: #ffffff;
 $text-light-blue: #316099;
-$bg-white: #fff;
+$bg-white: #ffffff;
 $bg-blue: #5a98d0;
 $bg-dark-blue: #1f3f68;
 $bg-ligh-blue: #316099;
